[project]
name = "pepedp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "llvmlite>=0.44.0",
    "numba>=0.61.2",
    "numpy>=2.2",
    "opencv-python>=4.11.0.86",
    "pepeline==1.0.0",
    "pyiqa",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
pyiqa = { git = "https://github.com/umzi2/IQA-PyTorch" }
